# gerador-etiqueta-recebimento

./: .gitignore  README.md  generate_labels.py  main.py  print_labels.py  pyproject.toml  requirements.txt  scraping.py  scraping_selenium.py
core/: generate_labels.py  print_labels.py  scraping.py
docs/: flowchart.md
